--- a/extra/learnhouse-conf.env
+++ b/extra/learnhouse-conf.env
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_LEARNHOUSE_MULTI_ORG=false
 NEXT_PUBLIC_LEARNHOUSE_DEFAULT_ORG=default
 NEXT_PUBLIC_LEARNHOUSE_TOP_DOMAIN=localhost
-NEXTAUTH_SECRET=changeme
+NEXTAUTH_SECRET=secret
 NEXTAUTH_URL=http://localhost
 # Backend
 LEARNHOUSE_COOKIE_DOMAIN=.localhost
